<resources>
    <string name="app_name">Quiz App</string>
    <string name="geography_quiz_app">Geography quiz app</string>
    <string name="insert_your_name">Insert your name</string>
    <string name="question_one">Which is the capital of Australia?</string>
    <string name="sydney">Sydney</string>
    <string name="question_two">Which city has more inhabitants?</string>
    <string name="melbourne">Melbourne</string>
    <string name="canberra">Canberra</string>
    <string name="mumbai">Mumbai</string>
    <string name="mexico_city">Mexico City</string>
    <string name="question_three">What is the longest river in the world</string>
    <string name="don_t_use_the_word_river_just_the_name">Don\'t use the word river, just the name</string>
    <string name="question_four">What is the longest river in Europe</string>
    <string name="danube">Danube</string>
    <string name="ural">Ural</string>
    <string name="volga">Volga</string>
    <string name="question_five">Which continent has the second largest population</string>
    <string name="africa">Africa</string>
    <string name="south_america">South America</string>
    <string name="europe">Europe</string>
    <string name="question_six">Which country is the third largest in Asia by surface area?</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="indonesia">Indonesia</string>
    <string name="india">India</string>
    <string name="question_seven">Which are the **two** most widely spoken language by number of native speakers?</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="mandarin">Mandarin</string>
    <string name="hindi_urdu">Hindi-Urdu</string>
    <string name="quiz_result">QUIZ RESULT</string>
    <string name="reset_quiz">Reset quiz</string>
    <string name="sao_paulo">Sao Paulo</string>
    <string name="you_can_do_better">You can do better:\u0020</string>
    <string name="try_again">Try again;</string>
    <string name="score_word">Score:</string>
    <string name="number_8">/8</string>
    <string name="congratulations">Congratulations:\u0020</string>
    <string name="did_great">You did great!</string>
</resources>
