<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exemplo.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:padding="8dp"
        android:background="#F1F8E9"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="18dp"
            android:textSize="22sp"
            android:text="@string/geography_quiz_app"
            android:layout_gravity="center"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/user_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:layout_marginBottom="12dp"
            android:hint="@string/insert_your_name"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/geography"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/which_is_the_capital_of_australia"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RGroup1"
            android:orientation="vertical"
            android:layout_gravity="start">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sydney"
                android:paddingLeft="24dp"
                android:textSize="18sp"
                android:id="@+id/sydney_radiobutton" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/canberra"
                android:paddingLeft="24dp"
                android:textSize="18sp"
                android:id="@+id/canberra_radiobutton"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/melbourne"
                android:paddingLeft="24dp"
                android:textSize="18sp"
                android:id="@+id/melbourne_radiobutton"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/colorAccent"
            android:text="@string/which_city_has_more_inhabitants"
            android:textAllCaps="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RGroup2"
            android:orientation="vertical"
            android:layout_gravity="left">

            <RadioButton
            android:id="@+id/mumbai_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/mumbai"
            android:textSize="18sp" />

            <RadioButton
            android:id="@+id/sao_paulo_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/sao_paulo"
            android:textSize="18sp" />

            <RadioButton
            android:id="@+id/mexico_city_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/mexico_city"
            android:textSize="18sp" />

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/river"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/what_is_the_longest_river_in_the_world"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/river_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:hint="@string/don_t_use_the_word_river_just_the_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/what_is_the_longest_river_in_europe"
            android:textAllCaps="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RGroup3"
            android:orientation="vertical"
            android:layout_gravity="start">

            <RadioButton
                android:id="@+id/danube_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/danube"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/ural_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/ural"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/volga_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/volga"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/which_continent_has_the_second_largest_population"
            android:textAllCaps="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RGroup4"
            android:orientation="vertical"
            android:layout_gravity="start">

            <RadioButton
            android:id="@+id/africa_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/africa"
            android:textSize="18sp" />

            <RadioButton
            android:id="@+id/south_america_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/south_america"
            android:textSize="18sp" />

            <RadioButton
            android:id="@+id/europe_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/europe"
            android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/which_country_is_the_third_largest_in_asia_by_surface_area"
            android:textAllCaps="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RGroup5"
            android:orientation="vertical"
            android:layout_gravity="start">

            <RadioButton
                android:id="@+id/saudi_arabia_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/saudi_arabia"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/indonesia_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/indonesia"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/india_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/india"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/which_are_the_two_most_widely_spoken_language_by_number_of_native_speakers"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/spanish_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/spanish"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/english_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/english"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/mandarin_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/mandarin"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/hindi_urdu_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/hindi_urdu"
            android:textSize="18sp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/quiz_result"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:onClick="showResult"/>

            <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_quiz"
            android:onClick="resetScore"
            android:id="@+id/resetScore"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>
